Add README and rename settings